Fix Join Us cards overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -809,10 +809,6 @@ section#join-us .card img {
 }
 
 /* repeating grid in Join Us */
-section#join-us div.container [id^='joinus-grid-'] {
-    height: 40px;
-    background-repeat: repeat-x;
-}
 
 #joinus-grid-networking {
     background: url("/images/join-us-bg-networking.svg");
@@ -828,6 +824,11 @@ section#join-us div.container [id^='joinus-grid-'] {
     background: url("/images/join-us-bg-opportunities.svg");
     background-position: 300px 0;
 }
+section#join-us [id^='joinus-grid-'] {
+    height: 40px;
+    background-repeat: repeat-x;
+}
+
 
 
 /*******************************/
@@ -1096,7 +1097,7 @@ small devices with max-width 768px */
 
     section#join-us .card {
         width: unset;
-        height: 100%
+        height: 100%;
     }
 
     /* end of Join us */
